--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,6 +2,9 @@
 
 <p><%= @group.body %></p>
 
-<%= link_to '編集', edit_group_path(@group) %>
-<%= link_to '削除', @group, method: :delete, data: { confirm: '本当に削除しますか？' } %>
+<% if @group.user_id == current_user.id %>
+  <%= link_to '編集', edit_group_path(@group) %>
+  <%= link_to '削除', @group, method: :delete, data: { confirm: '本当に削除しますか？' } %>
+<% end %>
+
 <%= link_to '一覧へ戻る', groups_path %>
