--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,15 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-      <% if user_signed_in? %>
-        <%= link_to "SignOut", destroy_user_session_path , method: :delete %>
-      <% else %>
-        <%= link_to "SignUp", new_user_registration_path %>
-        <%= link_to "SignIn", new_user_session_path %>
-      <% end %>
-      <%= link_to "About", about_path %>
+      <%= render "layouts/navigation" %>
     </header>
-    <main>
+    <main class="container">
       <%= notice %>
       <%= alert %>
       <%= yield %>
