--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
             <%= link_to "group all", groups_path , class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "user", current_user_path , class: "nav-link" %>
+            <%= link_to "user", user_path(current_user.id) , class: "nav-link" %>
           </li>
         <% else %>
           <li class="nav-item">
