--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,13 +11,13 @@
             <%= link_to "SignOut", destroy_user_session_path , method: :delete, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "create group", new_group_path , class: "nav-link" %>
+            <%= link_to "CreateGroup", new_group_path , class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "group all", groups_path , class: "nav-link" %>
+            <%= link_to "GroupAll", groups_path , class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "user", user_path(current_user.id) , class: "nav-link" %>
+            <%= link_to "User", user_path(current_user.id) , class: "nav-link" %>
           </li>
         <% else %>
           <li class="nav-item">
